# hermes-profile-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.ko.md  README.md  manifest.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml  upstream-sync.yml
docs/: commands.md  concepts.md  gateways.md  troubleshooting.md
docs/superpowers/plans/: 2026-05-15-hermes-profile-kit-v2.md  2026-05-15-seb-profile.md  2026-05-16-fast-install.md  2026-05-16-hermes-memory-plugin.md  2026-05-16-mem0-zero-tokens-v321.md
docs/superpowers/specs/: 2026-05-15-hermes-profile-kit-v2-design.md  (+3 more)
profiles/assistant/: .env.example  README.md  SOUL.md  config.yaml
profiles/coder/: .env.example  README.md  SOUL.md  config.yaml
profiles/community-bot/: .env.example  README.md  SOUL.md  config.yaml
profiles/research/: .env.example  README.md  SOUL.md  config.yaml
profiles/seb/: .env.example  README.md  SOUL.md  config.yaml  slack-app-manifest.json
scripts/: drift_report.py  install.sh  regen_docs.py  reset.sh  update_manifest_pin.py  verify.sh
scripts/codex-openai-proxy/: README.md  launchd.plist.example  proxy.py  pyproject.toml
scripts/codex-openai-proxy/tests/: test_codex_exec_contract.py  test_proxy.py
scripts/mem0-memory/: README.md  pyproject.toml
scripts/mem0-memory/src/mem0_memory/: __init__.py  cli.py  output.py  paths.py  store.py
scripts/mem0-memory/tests/: conftest.py  test_cli.py  test_doctor.py  test_fallback.py  test_paths.py  test_roundtrip.py  test_store.py  test_store_env_config.py  test_store_silent_fallback.py
src/hpk/: __init__.py  __main__.py  cli.py  env_file.py  hermes.py  manifest.py  plugins.py  profiles.py  ui.py  verify.py  wizard.py
tests/: conftest.py  test_cli.py  test_codegen.py  test_drift_report.py  test_env_file.py  test_hermes.py  test_manifest.py  test_plugins.py  test_profiles.py  test_ui.py  test_update_pin.py  test_verify.py  test_wizard.py  test_wizard_non_interactive.py
tests/e2e/: test_full_setup.py  test_mem0_memory.py  test_non_interactive_setup.py  test_seb_setup.py
tests/test_tokens/: test_anthropic.py  test_brave.py  test_discord.py  test_exa.py  test_openai_codex.py  test_registry.py  test_slack.py  test_telegram.py
(+12 files in other folders)
